<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <GridLayout
        tools:context=".pridajTovarVetva.PridajTovarFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/IAbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:text="@string/ia"
            android:layout_margin="4dp"/>

        <Button
            android:id="@+id/EMAbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:text="@string/ema"
            android:layout_margin="4dp"/>

        <Button
            android:id="@+id/HMAbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="2"
            android:text="@string/hma"
            android:layout_margin="4dp"/>

        <Button
            android:id="@+id/LMAbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="3"
            android:text="@string/lma"
            android:layout_margin="4dp"/>

        <Button
            android:id="@+id/CAbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/ca"
            android:layout_margin="4dp"/>

        <Button
            android:id="@+id/InAbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:text="@string/ina"
            android:layout_margin="4dp"/>

        <Button
            android:id="@+id/PEbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="2"
            android:text="@string/pe"
            android:layout_margin="4dp"/>

        <Button
            android:id="@+id/MEbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="3"
            android:text="@string/me"
            android:layout_margin="4dp"/>

        <Button
            android:id="@+id/PMEbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:text="@string/pme"
            android:layout_margin="4dp"/>

        <Button
            android:id="@+id/CEbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:text="@string/ce"
            android:layout_margin="4dp"/>

        <Button
            android:id="@+id/TEbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="2"
            android:text="@string/te"
            android:layout_margin="4dp"/>

        <Button
            android:id="@+id/FEbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="3"
            android:text="@string/fe"
            android:layout_margin="4dp"/>

        <Button
            android:id="@+id/AFbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:text="@string/af"
            android:layout_margin="4dp"/>

        <Button
            android:id="@+id/OFbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1"
            android:text="@string/of"
            android:layout_margin="4dp"/>

        <Button
            android:id="@+id/VFbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="2"
            android:text="@string/vf"
            android:layout_margin="4dp"/>

    </GridLayout>
</layout>