<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".mainFragmentVetva.MainFragment"
        android:orientation="vertical">

        <TextView
            android:id="@+id/PocetCEtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pocet_moznych_odomknuti_cechovej_expedicie"
            android:layout_marginTop="20dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/PocetCEnum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@id/PocetCEtext"
            android:layout_alignParentStart="true"
            android:text="@string/textview"
            android:textSize="48sp" />

        <Button
            android:id="@+id/PridajTovarButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pridaj_tovar"
            android:layout_marginTop="80dp"
            android:layout_below="@id/PocetCEnum"
            android:layout_centerHorizontal="true"
            android:textSize="32sp" />

        <Button
            android:id="@+id/OdomkniCEbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/PridajTovarButton"
            android:layout_marginTop="40dp"
            android:layout_centerHorizontal="true"
            android:text="@string/odomkni_expediciu"
            android:textSize="32sp" />

        <Button
            android:id="@+id/PozriSkladButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/OdomkniCEbutton"
            android:layout_marginTop="40dp"
            android:layout_centerHorizontal="true"
            android:text="@string/pozri_sklad"
            android:textSize="32sp" />

    </RelativeLayout>
    </ScrollView>
</layout>